Fixed spacing, Found source of bug for display message to be related to the interval method, Bug is preventing the application from working more than once upon running it, Dev tools shows that all values are correct, but sometimes values are set to null

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   font-size: 24px;
-  margin-left: 25%;
+  margin-left: 35%;
   margin-top: 5%;
 }
 
@@ -58,4 +58,12 @@ body {
 
 .top {
   margin-left: 35px;
+}
+
+.displayMessage {
+  margin-left: 10%;
+}
+
+.btn-row {
+  margin-left: 2%;
 }
